# infrared-protocols

./: README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
infrared_protocols/codes/edifier/: models.py  s3000pro.py
infrared_protocols/codes/general_electric/: yae1k2.py
infrared_protocols/codes/lg/: tv.py
infrared_protocols/codes/suntechlite/: sp511
infrared_protocols/commands/: general_electric.py  kaseikyo.py  panasonic_ac.py
tests/commands/: test_general_electric.py  test_panasonic_ac.py
